modification on categories and products(articles) pages

--- a/Angular/src/app/pages/articles/new-product/new-product.component.html
+++ b/Angular/src/app/pages/articles/new-product/new-product.component.html
@@ -11,23 +11,23 @@
             <form >
                 <div class="row">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Code article">
+                        <input type="text" class="form-control" placeholder="Product Code">
                     </div>
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Désignation">
+                        <input type="text" class="form-control" placeholder="Price">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Prix unitaire HT">
+                        <input type="text" class="form-control" placeholder="Name">
                     </div>
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Taux TVA">
+                        <input type="text" class="form-control" placeholder="Quantity">
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="col">
-                        <input type="text" class="form-control" placeholder="Prix unitaire TTC">
+                        <input type="text" class="form-control" placeholder="Description">
                     </div>
                     <div class="col">
                         <select class="form-control" id="exampleFormControlSelect1">
