--- a/Angular/src/app/composants/boutton-action/boutton-action.component.html
+++ b/Angular/src/app/composants/boutton-action/boutton-action.component.html
@@ -1,14 +1,14 @@
 <div class="d-flex">
     <DIV class="p-2 flex-fill" *ngIf="isImporterVisible">
         <button type="button" class="btn btn-warning">        <i class="fas fa-cloud-upload-alt"></i>&nbsp;
-            Importer</button>
+            upload</button>
 
     </DIV>
     <DIV class="p-2 flex-fill"  *ngIf="isExporterVisible">
         <button type="button" class="btn btn-success"><i class="fas fa-cloud-download-alt"></i>&nbsp;Exporter</button>
     </DIV>
-    <DIV class="p-2 flex-fill"  *ngIf="isNouveauVisible">
-        <button type="button" class="btn btn-primary" (click)="bouttonNouveauClick()">        <i class="fas fa-plus"></i>&nbsp;
-            Nouveau</button>
+    <DIV class="p-2 flex-fill"  *ngIf="isNewVisible">
+        <button type="button" class="btn btn-primary" (click)="bouttonNewClick()">        <i class="fas fa-plus"></i>&nbsp;
+            new</button>
     </DIV>
 </div>
