--- a/Angular/src/app/pages/categories/page-categorie/page-categorie.component.html
+++ b/Angular/src/app/pages/categories/page-categorie/page-categorie.component.html
@@ -1,72 +1,60 @@
-<div class="col">
-    <div class="row m-3">
-        <div class="col-md-8 p-0">
-            <h1>Liste des categories</h1>
-        </div>
-        <div class="col-md-4 text-right">
-            <app-boutton-action></app-boutton-action>
-        </div>
+<div class="container">
+    <div class="row my-3">
+      <div class="col-md-8">
+        <h1>Liste des categories</h1>
+      </div>
+      <div class="col-md-4 text-end">
+        <app-boutton-action></app-boutton-action>
+      </div>
     </div>
-    <div class="col m-3">
-        <div class="row col-md-12 alert alert-danger" *ngIf="errorMsgs">
-            {{ errorMsgs }}
+    <div class="my-3" *ngIf="errorMsgs">
+      <div class="alert alert-danger">{{ errorMsgs }}</div>
+    </div>
+    <div class="my-3" *ngFor="let cat of CategoriesList">
+      <div class="card mb-3">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-md-3 border-end">{{cat.category_id}}</div>
+            <div class="col-md-4 border-end">{{cat.name}}</div>
+            <div class="col-md-5">
+              <button type="button" class="btn btn-link" (click)="modifyCategory(cat.category_id)">
+                <i class="fas fa-pencil-alt"></i>&nbsp;Modify
+              </button>
+              <button type="button" class="btn btn-link text-danger" (click)="openModal(myModal,cat.category_id)">
+                <i class="fas fa-trash-alt"></i>&nbsp;Supprimer
+              </button>
+              <button type="button" class="btn btn-link">
+                <i class="far fa-list-alt"></i>&nbsp;Details
+              </button>
+            </div>
+          </div>
         </div>
-        <div class="row col-md-12 custom-border mb-3 p-3" *ngFor="let cat of CategoriesList">
-            <div class="col-md-3 custom-border-right">
-                {{cat.category_id}}
-            </div>
-            <div class="col-md-4 custom-border-right">
-                {{cat.name}}
-            </div>
-            <div class="col-md-3">
-                <div class="row">
-                    <div class="col-md-4">
-                        <button type="button" class="btn btn-link" (click)="modifyCategory(cat.category_id)">
-                            <i class="fas fa-pencil-alt"></i>&nbsp;Modify
-                        </button>
-                    </div>
-                    <div class="col-md-4">
-                        <button type="button" class="btn btn-link text-danger" data-toggle="modal"
-                            data-target="#modalDeleteCat" >
-                            <i class="fas fa-trash-alt"></i>&nbsp;Supprimer
-                        </button>
-                    </div>
-                    <div class="col-md-4">
-                        <button type="button" class="btn btn-link ">
-                            <i class="far fa-list-alt"></i>&nbsp;Details
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
     <div class="row mb-3" *ngIf="CategoriesList.length > 0">
-        <div class=" col-md-12 text-center">
-            <app-pagination></app-pagination>
-        </div>
+      <div class="col-md-12 text-center">
+        <app-pagination></app-pagination>
+      </div>
     </div>
-</div>
+  </div>
 
 <!-- Modal -->
-<div class="modal fade" id="modalDeleteCat" data-backdrop="static" data-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Confirmation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Etes vous-sur de vouloir supprimer cette categorie?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" >
-                    <i class="fas fa-ban"></i>&nbsp;Annuler</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" >
-                    <i class="fas fa-trash-alt"></i>&nbsp;Supprimer</button>
-            </div>
-        </div>
+<ng-template #myModal let-modal>
+    <div class="modal-header">
+      <h5 class="modal-title" id="staticBackdropLabel">Confirmation</h5>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
-</div>
+    <div class="modal-body">
+      Etes vous-sur de vouloir supprimer cette categorie?
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">
+        <i class="fas fa-ban"></i>&nbsp;Cancel
+      </button>
+      <button type="button" class="btn btn-danger" (click)="deleteCategory()">
+        <i class="fas fa-trash-alt"></i>&nbsp;confirmation
+      </button>
+    </div>
+  </ng-template>
