--- a/Angular/src/app/pages/mvtstk/page-mvtstk/page-mvtstk.component.html
+++ b/Angular/src/app/pages/mvtstk/page-mvtstk/page-mvtstk.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-md-4 text-right">
             <app-boutton-action
-                [isNouveauVisible]="false"
+                [isNewVisible]="false"
                 [isImporterVisible]="false"
               >
             </app-boutton-action>
