--- a/Angular/src/app/pages/categories/new-category/new-category.component.html
+++ b/Angular/src/app/pages/categories/new-category/new-category.component.html
@@ -35,7 +35,7 @@
                 <i class="fas fa-ban"></i>&nbsp; Annuler
             </button>
             <button class="btn btn-primary" (click)="addCategory()">
-                <i class="fas fa-save"></i>&nbsp; Enregitrer
+                <i class="fas fa-save"></i>&nbsp; Save
             </button>
         </div>
     </div>
