--- a/Angular/src/app/composants/detail-article/detail-article.component.html
+++ b/Angular/src/app/composants/detail-article/detail-article.component.html
@@ -4,22 +4,25 @@
         </div>
     
     <div class="col-md-5 border-right mb-1 mt-1">
-        <div class="col">
+        <div class="col" >
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-                <div class="col-md-11">Code article</div>
+                <div class="col-md-11" >{{productMD.product_id}}</div>
             </div>
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-                <div class="col-md-11">désignation</div>
+                <div class="col-md-11">{{productMD.name}} {{productMD.description}} </div>
             </div>
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-dollar-sign blue-color"></i> </div>
-                <div class="col-md-11">Prix HT</div>
+                <div class="col-md-11">{{productMD.price}}</div>
             </div>
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-dollar-sign blue-color"></i> </div>
-                <div class="col-md-11">Prix TTC</div>
+                <div class="col-md-11" *ngIf=" (productMD.quantity!=undefined && productMD.quantity >0); else elseBlock" > In stock</div>
+                <ng-template #elseBlock>
+                  <div>Out of stock</div>
+                </ng-template>
             </div>
         </div>
     </div>
@@ -34,8 +37,8 @@
         </div>
         <div class="col-md-10">
             <div class="row">
-                <div class="col-md-12">Code catégorie</div>
-                <div class="col-md-12">Déscription catégorie</div>
+                <div class="col-md-12">{{categoryMD.category_id}}</div>
+                <div class="col-md-12">{{categoryMD.name}}</div>
 
             </div>
         </div>
