change on dashborad to add the model in next time

--- a/Angular/src/app/composants/detail-article/detail-article.component.html
+++ b/Angular/src/app/composants/detail-article/detail-article.component.html
@@ -1,64 +1,62 @@
-<div class="row mb-1 mr-0  custom-border">
-        <div class="col-md-1 border-right p-1  mt-1 text-center">
-        <img src="assets/product.png" width="90px" height="100px">
-        </div>
-    
-    <div class="col-md-5 border-right mb-1 mt-1">
-        <div class="col" >
-            <div class="row">
-                <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-                <div class="col-md-11" >{{productMD.product_id}}</div>
-            </div>
-            <div class="row">
-                <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-                <div class="col-md-11">{{productMD.name}} {{productMD.description}} </div>
-            </div>
-            <div class="row">
-                <div class="col-md-1"> <i class="fas fa-dollar-sign blue-color"></i> </div>
-                <div class="col-md-11">{{productMD.price}}</div>
-            </div>
-            <div class="row">
-                <div class="col-md-1"> <i class="fas fa-dollar-sign blue-color"></i> </div>
-                <div class="col-md-11" *ngIf=" (productMD.quantity!=undefined && productMD.quantity >0); else elseBlock" > In stock</div>
-                <ng-template #elseBlock>
-                  <div>Out of stock</div>
-                </ng-template>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div class="col-md-3 border-right">
+<div class="container">
+    <div class="row mb-1 mr-0 custom-border" *ngIf="test==true">
+      <div class="col-md-1 border-right p-1 mt-1 text-center">
+        <img src="assets/product.png" class="img-fluid" alt="Product Image">
+      </div>
+      <div class="col-md-5 border-right mb-1 mt-1">
         <div class="row">
-            <div class="col-md-2">
-                <i class="fas fa-flag-checkered blue-color"></i>
-            </div>
+          <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
+          <div class="col-md-11">{{productMD.product_id}}</div>
+        </div>
+        <div class="row">
+          <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
+          <div class="col-md-11">{{productMD.name}} {{productMD.description}} </div>
+        </div>
+        <div class="row">
+          <div class="col-md-1"> <i class="fas fa-dollar-sign blue-color"></i> </div>
+          <div class="col-md-11">{{productMD.price}}</div>
+        </div>
+        <div class="row">
+          <div class="col-md-1"> <i class="fas fa-dollar-sign blue-color"></i> </div>
+          <div class="col-md-11" style="color:green" *ngIf="(productMD.quantity!==undefined && productMD.quantity >0); else elseBlock"> In stock</div>
+          <ng-template #elseBlock>
+            <div style="color: red;">Out of stock</div>
+          </ng-template>
+        </div>
+      </div>
+  
+      <div class="col-md-3 border-right">
+        <div class="row">
+          <div class="col-md-2">
+            <i class="fas fa-flag-checkered blue-color"></i>
+          </div>
         </div>
         <div class="col-md-10">
-            <div class="row">
-                <div class="col-md-12">{{categoryMD.category_id}}</div>
-                <div class="col-md-12">{{categoryMD.name}}</div>
-
-            </div>
+          <div class="row">
+            <div class="col-md-12" *ngIf=" categoryMD.category_id!==undefined ">{{categoryMD.category_id}}</div>
+            <div class="col-md-12" *ngIf=" categoryMD.name!==undefined ">{{categoryMD.name}}</div>
+  
+          </div>
         </div>
-    </div>
-    <div class="col-md-3">
-        <div class="row">
-            <div class="col-md-4">
-                <button type="button" class="btn btn-link">
-                    <i class="fas fa-pencil-alt"></i>&nbsp; Modifier</button>
-            </div>
-            <div class="col-md-4">
-                <button type="button" class="btn btn-link">
-                    <i class="fas fa-trash-alt"></i>&nbsp; Supprimer</button>
-            </div>
-            <div class="col-md-4"> 
-                <button type="button" class="btn btn-link">
-                    <i class="fas fa-list-alt"></i>&nbsp; Détail</button>
+      </div>
+  
+      <div class="col-md-3">
+        <button type="button" class="btn btn-link" (click)="modifyProduct()">
+          <i class="fas fa-pencil-alt"></i>  Modify
+        </button>
+  
+        <button type="button" class="btn btn-link" (click)="deleteProduct()">
+          <i class="fas fa-trash-alt"></i>  Delete
+        </button>
+  
+        <button type="button" class="btn btn-link">
+          <i class="fas fa-list-alt"></i>  Détail
+        </button>
+  
+      </div>
+  
+    
 
-            </div>
-        </div>
     </div>
-
-</div>
+  </div>
+  
