--- a/Angular/src/app/composants/detail-clt-frs/detail-clt-frs.component.html
+++ b/Angular/src/app/composants/detail-clt-frs/detail-clt-frs.component.html
@@ -7,15 +7,20 @@
     <div class="col">
         <div class="row">
             <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-            <div class="col-md-10">Nom</div>
+            <div class="col-md-10">
+                salah</div>
         </div>
         <div class="row">
             <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-            <div class="col-md-10">Prénom</div>
+            <div class="col-md-10">terchi</div>
         </div>
         <div class="row">
             <div class="col-md-1"> <i class="fas fa-phone-alt blue-color"></i> </div>
-            <div class="col-md-10">+216 22 343 567</div>
+            <div class="col-md-10">+216 23 343 543</div>
+        </div>
+        <div class="row">
+            <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
+            <div class="col-md-10">Customer</div>
         </div>
         
     </div>
@@ -28,16 +33,17 @@
     <div class="col">
         <div class="row">
             <div class="col-md-1"> <i class="fas fa-home blue-color"></i> </div>
-            <div class="col-md-10">Adresse 1 adresse 2</div>
+            <div class="col-md-10">Adresse </div>
         </div>
         <div class="row">
             <div class="col-md-1"> <i class="fas fa-map-marker-alt blue-color"></i> </div>
-            <div class="col-md-10">1234 Ville</div>
+            <div class="col-md-10">tunis</div>
         </div>
         <div class="row">
             <div class="col-md-1"> <i class="fas fa-globe-europe blue-color"></i> </div>
-            <div class="col-md-10">Pays</div>
+            <div class="col-md-10">tunisia</div>
         </div>
+   
         
     </div>
 </div>
