--- a/Angular/src/app/composants/detail-cmd-clt-frs/detail-cmd-clt-frs.component.html
+++ b/Angular/src/app/composants/detail-cmd-clt-frs/detail-cmd-clt-frs.component.html
@@ -7,11 +7,11 @@
         <div class="col">
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-                <div class="col-md-10">Nom</div>
+                <div class="col-md-10">salah</div>
             </div>
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-info-circle blue-color"></i> </div>
-                <div class="col-md-10">Prénom</div>
+                <div class="col-md-10">terchi</div>
             </div>
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-phone-alt blue-color"></i> </div>
@@ -30,12 +30,9 @@
             </div>
             <div class="row">
                 <div class="col-md-1"> <i class="fas fa-calendar-check blue-color"></i> </div>
-                <div class="col-md-10">12/12/2022</div>
+                <div class="col-md-10">3/26/2023</div>
             </div>
-            <div class="row">
-                <div class="col-md-1"> <i class="fas fa-solid fa-cart-plus blue-color"></i> </div>
-                <div class="col-md-10">LIVREE</div>
-            </div>
+       
         </div>
     </div>
     <div class="col-md-3 mb-1 mt-1">
