--- a/Angular/src/app/pages/articles/new-product/new-product.component.html
+++ b/Angular/src/app/pages/articles/new-product/new-product.component.html
@@ -45,11 +45,15 @@
             <div class="col md-12 text-right">
                 <button class="btn btn-danger mr-3" (click)="cancel()">
                     <i class="fas fa-ban"></i>&nbsp;
-                    Annuler
+                   Cancel
                 </button>
                 <button class="btn btn-primary" (click)="addproduct()">
                     <i class="fas fa-save"></i>&nbsp;
                     Save
+                </button>
+                <button class="btn btn-success" (click)="gotonewCategory()">
+                    <i class="fas fa-save"></i>&nbsp;
+                    NewCategory
                 </button>
             </div>  
         
