--- a/Angular/src/app/pages/page-cmd-clt-frs/page-cmd-clt-frs.component.html
+++ b/Angular/src/app/pages/page-cmd-clt-frs/page-cmd-clt-frs.component.html
@@ -1,7 +1,7 @@
 <div class="col">
     <div class="row m-3">
         <div class="col-md-8 p-0">
-            <h1>Commande {{origin}}</h1>
+            <h1>Commndes</h1>
         </div>
         <div class="col-md-4 text-right">
             <app-boutton-action 
@@ -18,18 +18,37 @@
                 <app-detail-cmd-clt-frs></app-detail-cmd-clt-frs>
           
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample" style="max-height: 300px;overflow-y: scroll ;">
-                <div class="card-body">
+                <div class="row mb-1 mr-0 custom-border">
+                    <div class="col-md-3 border-right mb-1 mt-1">
+                        <div class="row text-center">
+                            <div class="col-md-12"><h5>Product_Id</h5></div>
+                           
+                        </div>
+                    </div>
+                
+                    <div class="col-md-3 border-right mb-1 mt-1">
+                        <div class="row">
+                            <div class="col-md-12 text-center"><h5>Customer_Id</h5></div>
+                
+                        </div>
+                    </div>
+                
+                    <div class="col-md-2 border-right mb-1 mt-1">
+                        <div class="row">
+                            <div class="col-md-12 text-center"><h5>Total Price</h5></div>
+                        
+                        </div>
+                    </div>
+                
+                    <div class="col-md-2 mb-1 mt-1">
+                        <div class="row text-center">
+                            <div class="col-md-12"><h5> Quantity </h5></div>
+                        </div>
+                    </div>
+                </div>
+                
                     <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
-                    <app-detail-cmd></app-detail-cmd>       
+              
 
 
                 </div>  
@@ -37,8 +56,8 @@
               </div>
               <div class="card-footer">
                 <div class="row">
-                    <div class="col-md-9 text-left"><h5>12 articles commandes</h5></div>
-                    <div class="col-md-3 text-right"><h5>Total commandes 123,69</h5></div>
+                 
+                    <div class="col-md-3 text-right"><h5>Total commandes 1</h5></div>
                 </div>
             </div>
             </div>
