--- a/Angular/src/app/pages/page-dashboard/page-dashboard.component.html
+++ b/Angular/src/app/pages/page-dashboard/page-dashboard.component.html
@@ -6,7 +6,7 @@
             <div class="card col-md-2 mr-2">
                 <div class="col">
                     <div class="card mt-3 mb-2 border-none text-center">
-                        <h4>Gestion de stock</h4>
+                        <h4>Stock Managment</h4>
                     </div>
                     <div>
                         <app-menu></app-menu>
@@ -18,7 +18,7 @@
                     <div class="card p-3 min-height-80 mb-2">
                         <app-header></app-header>
                     </div>
-                    <div class="card mb-2" style="min-height:480px ">
+                    <div class="card mb-2" style="min-height:480px ;">
                         <router-outlet></router-outlet>
 
                     </div>
