--- a/Angular/src/app/composants/detail-cmd/detail-cmd.component.html
+++ b/Angular/src/app/composants/detail-cmd/detail-cmd.component.html
@@ -3,7 +3,7 @@
 
     <div class="col-md-3 border-right mb-1 mt-1">
             <div class="row text-center">
-                <div class="col-md-11">Code article</div>
+                <div class="col-md-11">2</div>
             </div>
     </div>
 
@@ -11,25 +11,20 @@
 
     <div class="col-md-3 border-right mb-1 mt-1">
         <div class="row">
-                <div class="col-md-12 text-center"><h5>Désignation article</h5></div>
+                <div class="col-md-12 text-center"><h5>2</h5></div>
             
         </div>
     </div>
+
     <div class="col-md-2 border-right mb-1 mt-1">
         <div class="row">
-                <div class="col-md-12 text-center">6</div>
-            
-        </div>
-    </div>
-    <div class="col-md-2 border-right mb-1 mt-1">
-        <div class="row">
-                <div class="col-md-12 text-center">12,3</div>
+                <div class="col-md-12 text-center">7000dt</div>
             
         </div>
     </div>
     <div class="col-md-2 mb-1 mt-1">
         <div class="row text-center">
-            73,8            
+           3   
         </div>
     </div>
 
