--- a/Angular/src/app/pages/client/page-client/page-client.component.html
+++ b/Angular/src/app/pages/client/page-client/page-client.component.html
@@ -1,7 +1,7 @@
 <div class="col">
     <div class="row m-3">
         <div class="col-md-8 p-0">
-            <h1>Listes des clients</h1>
+            <h1>User List</h1>
         </div>
         <div class="col-md-4 text-right">
             <app-boutton-action
@@ -10,9 +10,7 @@
     </div>
     <div class=" col m-3">
         <app-detail-clt-frs></app-detail-clt-frs>   
-        <app-detail-clt-frs></app-detail-clt-frs>
-        <app-detail-clt-frs></app-detail-clt-frs>
-        <app-detail-clt-frs></app-detail-clt-frs>
+       
 
     </div>
     <div class="row mb-3">
